[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/setting/setting.gd" type="Script" id=1]
[ext_resource path="res://scenes/toggle_button/ToggleButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/home_drawer_icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 3 )

[node name="Setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
mouse_filter = 2
color = Color( 0.286275, 0.368627, 0.698039, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 73.0
alignment = 1

[node name="SettingTitle" type="Label" parent="VBoxContainer/Title"]
margin_left = 124.0
margin_right = 356.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 10 )
text = "Setting"

[node name="BackRedirectBtn" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 480.0
margin_bottom = 177.0
alignment = 2

[node name="BackButton" type="Button" parent="VBoxContainer/BackRedirectBtn"]
margin_left = 280.0
margin_right = 480.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
rect_clip_content = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BackRedirectBtn/BackButton"]
margin_left = 103.0
margin_top = 67.0
margin_right = 182.0
margin_bottom = 151.0
rect_rotation = 180.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="MusicToggleBtn" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 181.0
margin_right = 480.0
margin_bottom = 230.0

[node name="Music" type="Label" parent="VBoxContainer/MusicToggleBtn"]
margin_right = 127.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "Music"

[node name="MusicToggle" type="Button" parent="VBoxContainer/MusicToggleBtn"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 131.0
margin_right = 143.0
margin_bottom = 49.0
align = 2
icon_align = 1

[node name="ToggleButton" parent="VBoxContainer/MusicToggleBtn/MusicToggle" instance=ExtResource( 2 )]
margin_left = 3.0
margin_top = 6.0
margin_right = 82.0
margin_bottom = 35.0

[node name="SfxToggle" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 480.0
margin_bottom = 283.0

[node name="Sfx" type="Label" parent="VBoxContainer/SfxToggle"]
margin_right = 90.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
text = "SFX"

[node name="SfxToggle" type="Button" parent="VBoxContainer/SfxToggle"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 94.0
margin_right = 106.0
margin_bottom = 49.0

[node name="ToggleButton" parent="VBoxContainer/SfxToggle/SfxToggle" instance=ExtResource( 2 )]
margin_left = -2.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 30.0

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 287.0
margin_right = 480.0
margin_bottom = 388.0

[node name="GameSound" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_right = 124.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 7 )
text = "Game
"

[node name="GameToggle" type="Button" parent="VBoxContainer/HBoxContainer5"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 128.0
margin_right = 140.0
margin_bottom = 101.0

[node name="ToggleButton" parent="VBoxContainer/HBoxContainer5/GameToggle" instance=ExtResource( 2 )]
margin_left = 7.0
margin_top = 1.0
margin_right = 86.0
margin_bottom = 28.0

[node name="ImgSlidingTurn" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ImgSlidingMiliSec" type="Timer" parent="."]
wait_time = 0.05

[connection signal="pressed" from="VBoxContainer/BackRedirectBtn/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicToggleBtn/MusicToggle" to="." method="_on_MusicToggle_pressed"]
[connection signal="pressed" from="VBoxContainer/SfxToggle/SfxToggle" to="." method="_on_SfxToggle_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer5/GameToggle" to="." method="_on_GameToggle_pressed"]
[connection signal="timeout" from="ImgSlidingTurn" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ImgSlidingMiliSec" to="." method="_on_ImgSlidingMiliSec_timeout"]
